# hadron_v3

./: .gitattributes  .gitignore  DEPLOY-GUIDE.md  GITHUB-TOOLS-FINAL-SUMMARY.txt  README.md  REFERENCE-IMPLEMENTATION-GUIDE.md  RELEASE-v1.1.0.md  START-HERE.md  package-lock.json  smalltalk-crash-analysis-development-plan.md  smalltalk-crash-analysis-phase2-enterprise.md  smalltalk-crash-analyzer-backlog.md
hadron-desktop/src-tauri/: Cargo.toml  build.rs  librust_out.rlib  tauri.conf.json
hadron-desktop/src-tauri/.cargo/: audit.toml  config.toml
hadron-desktop/src-tauri/data/patterns/: collection_errors.toml  database_errors.toml  null_errors.toml  whatson_specific.toml
hadron-desktop/src-tauri/docs/: REFACTORING-PLAN.md  analysis-types-mockup-v2.html  analysis-types-mockup-v3.html  analysis-types-mockup.html  database-admin-mockup.html  jira-import-mockup.html
hadron-desktop/src-tauri/icons/: README.md  create_icon.py  icon.icns
hadron-desktop/src-tauri/src/: ai_service.rs  breadcrumbs.rs  chat_commands.rs  chat_tools.rs  chunker.rs  commands.rs  commands_legacy.rs  crash_handler.rs  database.rs  deep_scan.rs  error.rs  evidence_extractor.rs  jira_brief.rs  jira_deep_analysis.rs  jira_poller.rs  jira_service.rs  jira_triage.rs  keeper_service.rs  main.rs  migrations.rs  model_fetcher.rs  python_runner.rs  rag_commands.rs  release_notes_service.rs  sentry_service.rs  signature.rs  stability.rs  str_utils.rs  ticket_briefs.rs  ticket_embeddings.rs  token_budget.rs  webview_recovery.rs  webview_udf.rs  widget_commands.rs
hadron-desktop/src-tauri/src/commands/: ai.rs  analytics.rs  archive.rs  bulk_ops.rs  crud.rs  export.rs  gold_answers.rs  info.rs  intelligence.rs  investigation.rs  jira.rs  jira_assist.rs  keeper.rs  mod.rs  notes.rs  patterns.rs  performance.rs  providers.rs  release_notes.rs  search.rs  sentry.rs  signatures.rs  summaries.rs  tags.rs
hadron-desktop/src-tauri/src/commands/common/: helpers.rs  mod.rs  types.rs
hadron-desktop/src-tauri/src/export/: mod.rs  report.rs  sanitizer.rs
hadron-desktop/src-tauri/src/export/generators/: generic.rs  html.rs  html_interactive.rs  json.rs  markdown.rs  mod.rs  txt.rs  xlsx.rs
hadron-desktop/src-tauri/src/models/: crash.rs  mod.rs
hadron-desktop/src-tauri/src/parser/: crash_file.rs  error.rs  mod.rs  patterns.rs
hadron-desktop/src-tauri/src/parser/sections/: context.rs  database.rs  environment.rs  exception.rs  header.rs  memory.rs  mod.rs  processes.rs  stack_trace.rs  windows.rs
hadron-desktop/src-tauri/src/patterns/: engine.rs  mod.rs  pattern.rs
hadron-desktop/src-tauri/src/patterns/matchers/: context.rs  database.rs  exception.rs  mod.rs  stack.rs
hadron-desktop/src-tauri/src/retrieval/: cache.rs  citation.rs  eval.rs  evidence_gate.rs  hybrid_analysis.rs  hybrid_kb.rs  mod.rs  opensearch.rs  query_planner.rs  rrf.rs
hadron-web/: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  INSTALL.md  docker-compose.yml
hadron-web/.cargo/: audit.toml
hadron-web/.claude/agents/: security-risk-auditor.md
hadron-web/crates/hadron-core/: Cargo.toml
hadron-web/crates/hadron-core/src/: ai_response.rs  error.rs  lib.rs  models.rs
hadron-web/crates/hadron-core/src/ai/: detect_language.rs  jira_analysis.rs  jira_brief.rs  jira_triage.rs  mod.rs  parsers.rs  performance.rs  prompts.rs  release_notes.rs  sentry_analysis.rs  types.rs
hadron-web/crates/hadron-core/src/analysis/: mod.rs
hadron-web/crates/hadron-core/src/evidence/: mod.rs
hadron-web/crates/hadron-core/src/export/: generators.rs  mod.rs  types.rs
hadron-web/crates/hadron-core/src/parser/: mod.rs  signature.rs
hadron-web/crates/hadron-core/src/performance/: metrics.rs  mod.rs  parser.rs  patterns.rs  scenario.rs  types.rs
hadron-web/crates/hadron-core/src/retrieval/: customer_mappings.rs  evidence_gate.rs  mod.rs  rrf.rs  types.rs
hadron-web/crates/hadron-core/style_guides/: whatson_release_notes.md
hadron-web/crates/hadron-investigation/: Cargo.toml
hadron-web/crates/hadron-investigation/src/: lib.rs
hadron-web/crates/hadron-investigation/src/atlassian/: adf.rs  attachments.rs  confluence.rs  jira.rs  mod.rs  mod_.rs
hadron-web/crates/hadron-investigation/src/investigation/: customer.rs  evidence.rs  evidence_builder.rs  expected.rs  mod.rs  regression.rs  related.rs  ticket.rs
hadron-web/crates/hadron-investigation/src/knowledge_base/: mod.rs
hadron-web/crates/hadron-mcp/: Cargo.toml
hadron-web/crates/hadron-mcp/src/: context.rs  errors.rs  lib.rs  schemas.rs
hadron-web/crates/hadron-mcp/src/tools/: mod.rs  release_notes.rs  search.rs  sentry.rs  tickets.rs
hadron-web/crates/hadron-mcp/tests/: tools.rs
hadron-web/crates/hadron-server/: Cargo.toml
hadron-web/crates/hadron-server/src/: crypto.rs  jira_poller.rs  main.rs  test_helpers.rs
hadron-web/crates/hadron-server/src/ai/: chat_transport.rs  mod.rs  tools.rs
hadron-web/crates/hadron-server/src/auth/: mod.rs
hadron-web/crates/hadron-server/src/db/: mod.rs
hadron-web/crates/hadron-server/src/integrations/: confluence.rs  embeddings.rs  jira.rs  mod.rs  opensearch.rs  sentry.rs
hadron-web/crates/hadron-server/src/middleware/: mod.rs
hadron-web/frontend/: .env.example  index.html  package.json
hadron-web/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
hadron-web/frontend/src/auth/: msal.ts
hadron-web/frontend/src/components/: ConfirmDialog.tsx  ErrorBoundary.tsx  Toast.tsx
hadron-web/frontend/src/hooks/: useAiStream.ts  useProgressStream.ts
hadron-web/frontend/src/services/: api.ts  investigation.ts
hadron-web/migrations/: 001_users_and_roles.sql  002_analyses.sql  003_chat_sessions.sql  004_settings.sql  005_opensearch_configs.sql  006_jira_configs.sql  007_release_notes.sql  008_embeddings.sql  009_full_text_search.sql  010_audit_log.sql  011_analysis_feedback.sql  012_gold_analyses.sql  013_global_settings.sql  014_ticket_briefs.sql  015_jira_poller.sql  016_release_notes_ai.sql  017_release_notes_review.sql  018_embeddings_owner.sql  019_investigation_settings.sql
phase-0-mvp/: .gitignore  (+7 more)
(+529 files in other folders)
