[package]
name = "hadron-desktop"
version = "1.1.0"
description = "Smalltalk Crash Analyzer - Desktop Application"
authors = ["Hadron Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
sha2 = "0.10"
dirs = "5.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
