[package]
name = "hadron-desktop"
version = "4.4.0"
description = "Hadron - AI Support Assistant"
authors = ["Hadron Team"]
license = "Proprietary"
repository = "https://github.com/PolycarpusTack/hadron_v3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-fs = "2.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
regex = "1"
once_cell = "1.19"

# Secure memory clearing for sensitive data (API keys, secrets)
zeroize = { version = "1.7", features = ["derive"] }

# Keeper Secrets Manager SDK for secure API key management
keeper-secrets-manager-core = "17.0"

# Base64 encoding for JIRA Basic Auth
base64 = "0.21"

# URL encoding for JIRA JQL queries
urlencoding = "2.1"

# Hex encoding for signature hashes
hex = "0.4"

# Better mutex implementation (no poisoning, faster)
parking_lot = "0.12"

# Parser dependencies
thiserror = "1.0"
anyhow = "1.0"

# Pattern matching dependencies
toml = "0.8"
glob = "0.3"
semver = "1.0"

# Report generation dependencies
minijinja = "2.0"
uuid = { version = "1.6", features = ["v4"] }

# XLSX export support
rust_xlsxwriter = "0.79"

# Patch tao to fix the flush_paint_messages assertion panic on Windows.
# Triggered by re-entrant WM_PAINT during device-change events (Bluetooth, VPN, USB).
# Remove this block once the fix is released in an official tao version.
# Upstream issue: https://github.com/tauri-apps/tao/issues/1140
[patch.crates-io]
tao = { git = "https://github.com/PolycarpusTack/tao", rev = "943f900264bde9e74b5b3c43afabd2df6e1fe0f2" }

[profile.dev]
# Keep debug builds lightweight to avoid rustc OOM on Windows while iterating.
debug = 0

[profile.release]
# LTO for smaller + faster binary
lto = "thin"
# Single codegen unit for better optimization
codegen-units = 1
